src/objects/Digital_Reading_Material__c.object
<CustomObject>
    <description>This object will store all digital reading materials that a contact purchases</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Digital Reading Materials</relationshipLabel>
        <relationshipName>Digital_Reading_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FON_Text_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Digital Reading Materials</relationshipLabel>
        <relationshipName>Digital_Reading_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Digital Reading Materials</relationshipLabel>
        <relationshipName>Digital_Reading_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_URL__c</fullName>
        <formula>Item__r.Media_Asset__r.PagesApi__Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>Receipt_Line__r.OrderApi__Receipt__r.OrderApi__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipLabel>Digital Reading Materials</relationshipLabel>
        <relationshipName>Digital_Reading_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Digital Reading Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material_URL__c</columns>
        <columns>Contact__c</columns>
        <columns>Item__c</columns>
        <columns>Purchase_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Reading Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Reading Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>